--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
 
 
 .interface{
-    max-width: 1280px;
+    max-width: 1090px;
     margin: 0 auto;
 }
 
@@ -198,8 +198,9 @@ section.topo-do-site .flex {
 
 
 .topo-do-site .txt-topo-site p {
+    font-size: 17px;
     color: rgb(28, 27, 27);
-    margin: 40px 0;
+    margin: 60px 0;
 }
 
 .img-topo-site {
