--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-* { 
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -13,19 +13,8 @@ body {
     font-weight: bold;
 }
 
-.Download button{
-     padding: 5px 40px;
-    font-size: 18px;
-    font-weight: 550;
-    background-color: rgb(221, 219, 222);
-    border: 0;
-    border-radius: 30px;
-    cursor: pointer;
-    transition: .2s;
-
-}
-
-.btn-contato button{
+.Download button,
+.btn-contato button {
     padding: 5px 40px;
     font-size: 18px;
     font-weight: 550;
@@ -42,17 +31,16 @@ body {
     transition: .6s;
 }
 
-
-.interface{
+.interface {
     max-width: 1090px;
     margin: 0 auto;
 }
 
 header {
-    padding: 40px 4%;  
+    padding: 40px 4%;
 }
 
-header > .interface{
+header > .interface {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -62,7 +50,7 @@ header a {
     color: black;
     text-decoration: none;
     display: inline-block;
-    transition: .2s;    
+    transition: .2s;
 }
 
 header nav.menu-navegacao a:hover {
@@ -70,32 +58,27 @@ header nav.menu-navegacao a:hover {
     transform: scale(1.10);
 }
 
-header nav.menu-navegacao ul{
-    font-size: 15px;
-  
-}
-
+header nav.menu-navegacao ul,
 header nav ul {
     list-style-type: none;
 }
 
+header nav.menu-navegacao ul {
+    font-size: 15px;
+}
 
 header nav.menu-navegacao ul li {
     display: inline-block;
     padding: 0 40px;
 }
 
-.btn-contato button:hover{
+.btn-contato button:hover,
+.Download button:hover,
+button:hover,
+form .btn-enviar input:hover {
     box-shadow: 0px 0px 8px rgb(21, 21, 21);
     transform: scale(1.05);
 }
-
-.Download button:hover{
-    box-shadow: 0px 0px 8px rgb(21, 21, 21);
-    transform: scale(1.05);
-}
-
-
 
 h2.titulo {
     color: black;
@@ -106,6 +89,7 @@ h2.titulo {
 h2.titulo span {
     color: darkviolet;
 }
+
 .link-sem-sublinhado {
     text-decoration: none;
 }
@@ -115,12 +99,12 @@ h2.titulo span {
 }
 
 /* estilo menu-mobile */
-.abrir-list i{
+.abrir-list i {
     color: darkviolet;
     font-size: 40px;
 }
 
-.menu-mobile{
+.menu-mobile {
     background-color: rgba(255, 255, 255, 0.925);
     height: 100vh;
     position: fixed;
@@ -132,42 +116,41 @@ h2.titulo span {
     transition: .5s;
 }
 
-.menu-mobile.abrir-menu{
+.menu-mobile.abrir-menu {
     width: 70%;
 }
-.menu-mobile.abrir-menu ~ .overlay-menu{
+
+.menu-mobile.abrir-menu ~ .overlay-menu {
     display: block;
 }
 
-
-.menu-mobile .btn-fechar{
+.menu-mobile .btn-fechar {
     padding: 20px 5%;
 }
 
-.menu-mobile .btn-fechar i{
+.menu-mobile .btn-fechar i {
     color: rgb(94, 91, 95);
     font-size: 30px;
 }
 
-.menu-mobile nav ul{
+.menu-mobile nav ul {
     text-align: right;
 }
 
-.menu-mobile nav ul li a{
+.menu-mobile nav ul li a {
     color: darkviolet;
     font-size: 20px;
     font-weight: 650;
     padding: 20px 8%;
     display: block;
-
 }
 
-.menu-mobile nav ul li a:hover{
+.menu-mobile nav ul li a:hover {
     background-color: rgb(197, 194, 198);
     color: #000;
 }
 
-.overlay-menu{
+.overlay-menu {
     background-color: rgba(0, 0, 0, 0.582);
     width: 100%;
     height: 100%;
@@ -196,7 +179,6 @@ section.topo-do-site .flex {
     line-height: 40px;
 }
 
-
 .topo-do-site .txt-topo-site p {
     font-size: 20px;
     color: rgb(28, 27, 27);
@@ -204,7 +186,7 @@ section.topo-do-site .flex {
 }
 
 .img-topo-site {
-    text-align: center; 
+    text-align: center;
     height: 600px;
     margin: 20px;
 }
@@ -218,21 +200,20 @@ section.topo-do-site .flex {
     0% {
         top: 0;
     }
+
     100% {
         top: 25px;
     }
 }
-
 
 .logo img {
     width: 230px;
     height: 230px;
 }
 
-.menu-navegacao ul{
+.menu-navegacao ul {
     padding-right: 60px;
 }
-
 
 .interface .contato {
     margin-top: -96px;
@@ -268,7 +249,6 @@ section.topo-do-site .flex {
     transition: 0.4s;
 }
 
-
 .btn-entre-em-contato button:hover {
     transform: scale(1.10);
 }
@@ -277,7 +257,6 @@ section.topo-do-site .flex {
     display: flex;
     margin: auto;
     gap: 100%;
-    
 }
 
 .alto {
@@ -285,18 +264,14 @@ section.topo-do-site .flex {
     padding-top: 15px;
 }
 
-
-
-button:hover,
-form .btn-enviar input:hover {
-    box-shadow: 0px 0px 8px darkviolet;
-    transform: scale(1.05);
-}
-
-
 /* SEÇÃO DE ESPECIALIDADES */
 section.especialidades {
     padding: 40px 4%;
+}
+
+section.especialidades header {
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 section.especialidades .flex {
@@ -313,7 +288,7 @@ section.especialidades .flex {
     cursor: pointer;
 }
 
-.especialidades .especialidades-box:hover{
+.especialidades .especialidades-box:hover {
     transform: scale(1.05);
     box-shadow: 0 0 8px darkviolet;
 }
@@ -332,12 +307,11 @@ section.especialidades .flex {
     margin: 15px 0;
 }
 
-
-
 /* SEÇÃO DE TENHA MENTALIDADE */
 section.portfolio {
     padding: 100px 4%;
-    box-shadow: 0 0 40px 10px rgba(141, 11, 197, 0.325);
+    align-items: center;
+    justify-content: center;
 }
 
 section.portfolio .flex {
@@ -345,7 +319,7 @@ section.portfolio .flex {
     margin-top: 60px;
 }
 
-.img-port  {
+.img-port {
     width: 360px;
     height: 460px;
     background-color: darkviolet;
@@ -388,7 +362,7 @@ section.formulario {
     padding: 80px 4%;
 }
 
-form{
+form {
     max-width: 500px;
     margin: 0 auto;
     display: flex;
@@ -398,7 +372,8 @@ form{
     margin-top: 90px;
 }
 
-form input, form textarea{
+form input,
+form textarea {
     width: 100%;
     background-color: rgb(231, 225, 225);
     border: 0;
@@ -410,7 +385,7 @@ form input, form textarea{
 }
 
 form textarea {
-    resize: none;
+    resize: vertical;
     max-height: 300px;
     width: 100%;
     background-color: rgb(231, 225, 225);
@@ -442,10 +417,6 @@ form .btn-enviar input:hover {
     transform: scale(1.05);
 }
 
-
-
-
-
 /* SEÇÃO FINAL */
 .final {
     text-align: center;
@@ -455,14 +426,8 @@ form .btn-enviar input:hover {
     padding: 10px 30px;
 }
 
-
-
-/* ESTILOS RESPONSIVOS
- */
-@media screen and (max-width: 1080px) { 
-
-    /* classes gerais */
-
+/* ESTILOS RESPONSIVOS */
+@media screen and (max-width: 1080px) {
     .flex {
         flex-direction: column;
     }
@@ -471,95 +436,47 @@ form .btn-enviar input:hover {
         font-size: 34px;
         line-height: 30px;
     }
-    
-
-    /* cabeçario */
 
     .menu-navegacao,
     .btn-contato {
         display: none;
     }
 
-    /* topo do site */
+    section.topo-do-site .flex {
+        gap: 40px;
+    }
 
-section.topo-do-site .flex{
-    gap: 40px;
-}
+    section.topo-do-site {
+        padding: 20px 8%;
+    }
 
-section.topo-do-site{
-    padding: 20px 8%;
-}
+    .topo-do-site h1 {
+        font-size: 30px;
+    }
 
-.topo-do-site h1{
-    font-size: 30px;
-}
+    .topo-do-site .img-topo-site img {
+        width: 100%;
+    }
 
-.topo-do-site .img-topo-site img {
-    width: 100%;
-}
+    section.especiliadades {
+        padding: 48px 8%;
+    }
 
-/* especialidades */
+    section.portfolio {
+        padding: 80px 8%;
+    }
 
-section.especiliadades{
-    padding: 48px 8%;
-}
+    .abrir-list {
+        display: block;
+    }
 
-/* portfolio */
+    .img-port {
+        width: 100%;
+        max-width: 360px;
+        margin: 0 auto;
+    }
 
-
-section.portfolio {
-    padding: 80px 8%; 
-}
-
-.abrir-list {
-    display: block;
-}
-
-.img-port {
-    width: 100%;
-    max-width: 360px;
-    margin: 0 auto;
-}
-
-section.portfoliio .flex{
-    gap: 60px;
-} 
-
- 
-}
-
-
-/* pagina thank you */
-
-.main-um{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background-color: rgb(255, 255, 255);
-    flex-direction: column;
-}
-
-.text-um{
-    font-size: 45px;
-    color: darkviolet;
-    margin-bottom: 30px;
-}
-
-.paragrafo-um{
-    color: rgb(49, 36, 36);
-    margin-bottom: 50px;
-}
-
-.btn-um{
-    padding: 15px 55px;
-    background: #fff;
-    text-decoration: none;
-    color: blueviolet;
-    font-size: 18px;
-    transition: all 0.5s;
-}
-
-.btn-um:hover{
-    border-radius: 16px;
+    section.portfolio .flex {
+        gap: 60px;
+    }
 }
